--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -5,4 +5,5 @@
     <string name="ivImagenDesc">Class icon</string>
     <string name="descripcion">Descripción</string>
     <string name="clase">Clase</string>
+    <string name="filterPersonaje">Buscar personajes</string>
 </resources>
