--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,14 @@
     <string name="classicon">ClassIcon</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="nombreArma">Nombre del arma</string>
+    <string name="calidadArma">Calidad</string>
+    <string name="turno">Turno</string>
+    <string name="habilidadDeAtaque">Habilidad de ataque</string>
+    <string name="damage">Daño</string>
+    <string name="parry">Parada</string>
+    <string name="value">Valor</string>
+    <string name="cancelar">Cancelar</string>
+    <string name="modificar">Modificar</string>
+    <string name="peso">Peso</string>
 </resources>
