--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -19,4 +19,17 @@
     <string name="cancelar">Cancelar</string>
     <string name="modificar">Modificar</string>
     <string name="peso">Peso</string>
+    <string name="class_icon">Class icon</string>
+    <string name="tvClase">Clase</string>
+    <string name="nombrePersonaje">Nombre del personaje</string>
+    <string name="siguiente">Siguiente</string>
+    <string name="extended_fab_content_desc">Añadir</string>
+    <string name="agilidad">Agilidad</string>
+    <string name="constitucion">Constitución</string>
+    <string name="destreza">Destreza</string>
+    <string name="fuerza">Fuerza</string>
+    <string name="inteligencia">Inteligencia</string>
+    <string name="percepcion">Percepción</string>
+    <string name="poder">Poder</string>
+    <string name="voluntad">Voluntad</string>
 </resources>
