Esta versión crea correctamente los personajes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,13 @@
     <string name="percepcion">Percepción</string>
     <string name="poder">Poder</string>
     <string name="voluntad">Voluntad</string>
+    <string name="nivel">Nivel</string>
+    <string name="crear">Crear personaje</string>
+    <string name="esquiva">Esquiva</string>
+    <string name="llevarArmadura">Llevar armadura</string>
+    <string name="rm">RM</string>
+    <string name="rf">RF</string>
+    <string name="rp">RP</string>
+    <string name="stamina">Puntos de cansancio</string>
+    <string name="hp">Puntos de vida</string>
 </resources>
