--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -42,4 +42,5 @@
     <string name="stamina">Puntos de cansancio</string>
     <string name="hp">Puntos de vida</string>
     <string name="none" />
+    <string name="chardat">RPG CharDat</string>
 </resources>
